# sanre

./: README.md  sanre.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Main.hs
src/Sanre/: Dot.hs  Draw.hs  FileTree.hs  Graph.hs  Types.hs
