name:                sanre
version:             0.1.0.0
synopsis:            Draws graph for Haskell modules tree
description:         Creates an image file with modules imports
homepage:            http://github.com/triplepointfive/sanre#readme
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
copyright:           2015 Ilya Smelkov
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable sanre
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , cmdargs
                     , containers
                     , directory-tree
                     , graphviz
                     , haskell-src
                     , haskell-src-exts
                     , haskell-src-meta
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/triplepointfive/sanre
